re PR c/21911 (named parameter mistakenly identified as sentinel)

PR c/21911
	* c-common.c (check_function_sentinel): Pass in named argument
	list, skip over named arguments before looking for a sentinel.
	(check_function_arguments): Pass in named argument list.
	* c-common.h (check_function_arguments): Likewise.
	* c-typeck.c (build_function_call): Likewise.

cp:
	* call.c (build_over_call): Pass in named argument list to
	`check_function_arguments'.
	* typeck.c (build_function_call): Likewise.

testsuite:
	PR c/21911
	* gcc.dg/format/sentinel-1.c: Update.  Fix execl* calls.

From-SVN: r101341